Добавлены все гет запросы для кинотеатров
